<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XRoads</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="registerAct_header_user_details">User Details</string>
    <string name="registerAct_mobile">Mobile*</string>
    <string name="registerAct_email">Email Id</string>
    <string name="registerAct_name">Name</string>
    <string name="registerAct_password">Password*</string>
    <string name="registerAct_confirm_password">Confirm Password*</string>
    <string name="registerAct_register_me">Register Me!</string>
    <string name="login_link">Already a member? Login here</string>
    <string name="otpAct_otp_message">Please enter the OTP sent to your mobile/email</string>
    <string name="otpAct_otp">OTP</string>
    <string name="otpAct_next">Next</string>
    <string name="loginAct_password">Password</string>
    <string name="loginAct_mobile">Mobile</string>
    <string name="loginAct_Login">Login</string>
    <string name="register_link">New to XRoads? Register here</string>

    <color name="gray">#D8D8D8</color>
    <color name="lavender">#9F81F7</color>
    <color name="black">#000000</color>
    <color name="floating_action_button_color">#9F81F7</color>

    <string name="title_activity_otp">OtpActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_tracking_maps">Map</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Okay</string>
    <string name="not_connected_to_internet">Not connected to Internet, please check connection</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="title_activity_trip_create">TripCreateActivity</string>

    <string name="save">Save</string>
    <string name="select_date">Select Date</string>
    <string name="start_date">Start Date dd/mm/yyyy</string>
    <string name="end_date">End Date dd/mm/yyyy</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="refresh">Refresh</string>


    <string-array name ="city_arr">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
